--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
     <tbody></tbody>
   </table>
 
+  <div class="form-group">
+  <label>Export From Date</label>
+  <input type="date" id="startDate">
+</div>
+
+<div class="form-group">
+  <label>Export To Date</label>
+  <input type="date" id="endDate">
+</div>
+
   <div class="actions">
     <button onclick="exportExcel()">Export to Excel</button>
     <button onclick="exportPDF()">Export to PDF</button>
