--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <input type="number" step="0.1" id="ph">
     </div>
 
-    <button type="submit">➕ Add Log Entry</button>
+    <button type="submit">Add Log Entry</button>
 
   </form>
 
